# cinnabar-module-base

./: .gitignore  CMakeLists.txt  README.md
module_api/: README.md  ce_event_handler.h  module.h
src/: CMakeLists.txt  sample_module.cpp  sample_module.h
